--- a/pom.xml
+++ b/pom.xml
@@ -1,27 +1,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.halvors</groupId>
-	<artifactId>halvors</artifactId>
+	<groupId>org.halvors.game</groupId>
+	<artifactId>game</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>halvors</name>
+	<name>Game</name>
 	<description>.</description>
-	<url>https://github.com/halvors/LupiMap</url>
+	<url>https://github.com/halvors/Game</url>
 	<issueManagement>
 		<system>Github</system>
-		<url>https://github.com/halvors/Lupi/issues</url>
+		<url>https://github.com/halvors/Game/issues</url>
 	</issueManagement>
 	<scm>
-		<connection>scm:git:git://github.com/halvors/LupiMap.git</connection>
-		<developerConnection>scm:git:git@github.com:halvors/LupiMap.git</developerConnection>
-		<url>https://github.com/halvors/LupiMap</url>
+		<connection>scm:git:git://github.com/halvors/Game.git</connection>
+		<developerConnection>scm:git:git@github.com:halvors/Game.git</developerConnection>
+		<url>https://github.com/halvors/Game</url>
 	</scm>
-	<!-- Repository locations -->
-	<repositories>
-		<repository>
-			<id>bukkit-repo</id>
-			<url>http://repo.bukkit.org/artifactory/repo</url>
-		</repository>
-	</repositories>
 	<build>
 		<!-- Plugins -->
 		<plugins>
@@ -36,15 +29,6 @@
 			</plugin>
         </plugins>
     </build>
-    <!-- Dependencies -->
-    <dependencies>
-    	<!-- CraftBukkit -->
-        <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>craftbukkit</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
