--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,13 @@
 		<developerConnection>scm:git:git@github.com:halvors/Game.git</developerConnection>
 		<url>https://github.com/halvors/Game</url>
 	</scm>
+	<dependencies>
+    	<dependency>
+    		<groupId>org.lwjgl.lwjgl</groupId>
+    		<artifactId>lwjgl_util</artifactId>
+    		<version>2.8.1</version>
+		</dependency>
+    </dependencies>
 	<build>
 		<!-- Plugins -->
 		<plugins>
@@ -31,5 +38,5 @@
     </build>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+  	</properties>
 </project>
