--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     	<dependency>
     		<groupId>org.lwjgl.lwjgl</groupId>
     		<artifactId>lwjgl_util</artifactId>
-    		<version>2.8.1</version>
+    		<version>2.8.3</version>
 		</dependency>
     </dependencies>
 	<build>
@@ -35,18 +35,18 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>com.googlecode.mavennatives</groupId>
-				<artifactId>maven-nativedependencies-plugin</artifactId>
-				<version>0.0.5</version>
-				<executions>
-					<execution>
-						<id>unpacknatives</id>
-						<phase>generate-resources</phase>
-						<goals>
-							<goal>copy</goal>
-						</goals>
-					</execution>
-				</executions>
+        		<groupId>com.googlecode.mavennatives</groupId>
+        		<artifactId>maven-nativedependencies-plugin</artifactId>
+        		<version>0.0.5</version>
+        		<executions>
+              		<execution>
+                    	<id>unpacknatives</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                        	<goal>copy</goal>
+                        </goals>
+               	 	</execution>
+        		</executions>
 			</plugin>
 		</plugins>
 		<pluginManagement>
@@ -61,15 +61,9 @@
 							<pluginExecutions>
 								<pluginExecution>
 									<pluginExecutionFilter>
-										<groupId>
-											com.googlecode.mavennatives
-										</groupId>
-										<artifactId>
-											maven-nativedependencies-plugin
-										</artifactId>
-										<versionRange>
-											[0.0.5,)
-										</versionRange>
+										<groupId>com.googlecode.mavennatives</groupId>
+										<artifactId>maven-nativedependencies-plugin</artifactId>
+										<versionRange>[0.0.5,)</versionRange>
 										<goals>
 											<goal>copy</goal>
 										</goals>
